--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="bg-slate-300" class="rounded-lg-700">
         <div class="rounded-lg-700">
            <h1>
-               <p class="text-9xlbg-clip-text text-transparent bg-gradient-to-r from-pink-500 to-violet-500"> Web Programming Week 01 </p>
+               <p class="text-9xl"> Web Programming Week 01 </p>
             </h1> 
         </div>
 
